<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#E0CDA9"
        app:titleTextColor="@color/black"
        app:title="@string/Mode_son"
        app:titleCentered="true"
        android:fontFamily="@font/montserrat_bold"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:icon="@drawable/back_button_icon"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:rippleColor="@color/purple_200"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setting_visual"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:icon="@drawable/setting_icon"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:rippleColor="@color/purple_200"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ViewAnimator
        android:id="@+id/view_animator"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/setting_visual">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sound_icon"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@drawable/image1"
            />

    </ViewAnimator>

    <TextView
        android:id="@+id/color_pallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_activated"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_animator"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_bottom"
        style="@style/BottomNavigationStyle"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <TextView
        android:id="@+id/message_already_there"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vous_tes_d_j_dans_la_zone_audio"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:background="#E0CDA9"
        android:padding="18dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_marginBottom="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/montserrat_bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
